# F_Brain-

./: .env  .pnp.cjs  README  docker-compose.yml  package-lock.json  package.json  requirements.txt
Client/: .dockerignore  .env  dockerfile.client  dockerfile.devclient  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
Client/src/: App.jsx  main.jsx
Python-3.13.0/: Makefile  Makefile.pre  config.status  pyconfig.h
Python-3.13.0/Modules/: Setup.stdlib  _abc.gcda  _asynciomodule.gcda  _bisectmodule.gcda  _bz2module.gcda  _codecsmodule.gcda  _collectionsmodule.gcda  _contextvarsmodule.gcda  _csv.gcda  _curses_panel.gcda  _cursesmodule.gcda  _datetimemodule.gcda  _elementtree.gcda  _functoolsmodule.gcda  _gdbmmodule.gcda  _hashopenssl.gcda  _heapqmodule.gcda  _interpchannelsmodule.gcda  _interpqueuesmodule.gcda  _interpretersmodule.gcda  _json.gcda  _localemodule.gcda  _lsprof.gcda  _opcode.gcda  _operator.gcda  _pickle.gcda  _posixsubprocess.gcda  _queuemodule.gcda  _randommodule.gcda  _ssl.gcda  _stat.gcda  _statisticsmodule.gcda  _struct.gcda  _suggestions.gcda  _sysconfig.gcda  _testbuffer.gcda  _testcapimodule.gcda  _testclinic.gcda  _testclinic_limited.gcda  _testexternalinspection.gcda  (+49 more)
Python-3.13.0/Objects/: abstract.gcda  boolobject.gcda  (+41 more)
init-db/: schema.sql
proxy/: dockerfile.proxy  nginx.conf
server/: db.sqlite3  dockerfile.server  index.js  manage.py  pyproject.toml  requirements.txt
server/server_config/: settings.py  urls.py
server/social/: authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+197 files in other folders)
