[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "fankep",email = "108646@ecole-it.com"}
]
readme = null
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "authlib (>=1.6.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
